stretch goal reached: fixed nav bar with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,9 @@ p {
   text-align: center;
   padding-bottom: 2%;
   background: #F6F6F6;
+  width: 100%;
+  position: fixed;
+  opacity: 90%;
 }
 .links h1 {
   font-size: 5rem;
@@ -189,6 +192,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+header {
+  padding-top: 18%;
 }
 .home .intro h2 {
   padding: 15px;
