--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,9 @@
 // Home Content
 
+header{
+  padding-top:18%;
+}
+
 .home {
   .intro {
 
