--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,9 @@
 // Navigation code here
 .links{
     .headerdisplay();
+    width:100%;
+    position:fixed;
+    opacity:90%;
 
     h1{
         font-size:5rem;
@@ -11,5 +14,5 @@
     a{
         .linkstext();
     }
-
 }
+
